--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,15 @@
+#DB
 DB_HOST=
 
+#HOSTING
 PORT=
+
+#TOKENS
+ACCESS_TOKEN_SECRET_KEY=
+REFRESH_TOKEN_SECRET_KEY=
+JWT_ACCESS_EXPIRE_TIME=
+JWT_REFRESH_EXPIRE_TIME=
+
+#COOKIES
+COOKIE_SECRET_KEY=
+COOKIE_MAX_AGE=
