--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "4.17.1",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "~7.3.0",
+    "mongoose": "^7.3.0",
     "morgan": "1.10.0"
   },
   "devDependencies": {
@@ -28,5 +28,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
     "nodemon": "2.0.15"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
