--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "7.19.0",
