--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "cookie-parser": "^1.4.6",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
@@ -18,9 +17,7 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
-    "morgan": "1.10.0",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "morgan": "1.10.0"
   },
   "devDependencies": {
     "eslint": "7.19.0",
