--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "4.17.1",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "luxon": "^3.3.0",
     "mongoose": "^7.3.0",
     "morgan": "1.10.0"
   },
